--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="remove_crime">Remove Crime</string>
     <string name="crime_suspect_text">Choose Suspect</string>
     <string name="crime_report_text">Send Crime Report</string>
+    <string name="crime_call_text">打电话</string>
 
     <string name="crime_report">%1$s!
         The crime was discovered on %2$s. %3$s, and %4$s
